# rutube_ai_helper

./: .gitignore  Makefile  README.md  docker-compose.yaml  pyproject.toml
api/: Dockerfile  main.py  pyproject.toml
api/.ipynb_checkpoints/: Dockerfile-checkpoint  pyproject-checkpoint.toml
api/scripts/: api_models.py  inference.py  model_config.py
api/scripts/.ipynb_checkpoints/: inference-checkpoint.py  model_config-checkpoint.py
tg_bot/: Dockerfile  main.py  pyproject.toml
tg_bot/handlers/: handlers.py
