[tool.poetry]
name = "rutube-ai-supporter"
version = "0.1.0"
description = ""
authors = ["Роман Лазовский <r.v.lazovskiy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
gdown = "^5.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
